# DataRx

DataRx-main/: .gitignore  README.md  cleaned.csv  leakage_report.csv  pyproject.toml
DataRx-main/DataRx/: cleaner.py  cli.py  eda.py  leakage.py  pca.py  scaler.py
DataRx-main/backups/: cleaned_before_encoding_20260509_115057.csv
DataRx-main/eda_outputs/20260509_005133/: eda_report.txt
datamedic-main/: LICENSE  README.md  pyproject.toml  requirements.txt
datamedic-main/datamedic/: encoder.py
