[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datarx"
version = "1.0.0"
description = "A Python package for cleaning CSV files and detecting data leakage in machine learning workflows"
readme = "README.md"
authors = [{ name = "Rachit Jain", email = "jrachit683@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "pandas>=1.5.3",
    "scikit-learn>=1.2.2",
    "numpy>=1.24.3",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.urls]
"Homepage" = "https://github.com/rachit-jain123/DataRx"

[project.scripts]
datarx = "datarx.cli:cli"